--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ discordpy-slash = "^5.0.0"
 pymongo = "^3.11.4"
 dnspython = "^2.1.0"
 discord = "^1.0.1"
+discord-buttons-plugin = "^0.1.2"
 
 [tool.poetry.dev-dependencies]
 
