--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pymongo = "^3.11.4"
 dnspython = "^2.1.0"
 discord = "^1.0.1"
 discord-buttons-plugin = "^0.1.2"
+PyNaCl = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 
