--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pymongo = "^3.11.4"
 dnspython = "^2.1.0"
 discord = "^1.0.1"
 PyNaCl = "^1.4.0"
+google-auth-httplib2 = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 
