--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dnspython = "^2.1.0"
 discord = "^1.0.1"
 PyNaCl = "^1.4.0"
 google-auth-httplib2 = "^0.1.0"
+google-api-python-client = "^2.15.0"
+cryptography = "^3.4.7"
+oauth2client = "^4.1.3"
 
 [tool.poetry.dev-dependencies]
 
